infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: server-srv
spec:
  rules:
    - host: fusion.com
      http:
        paths:
          - path: /api/v1/admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-srv
                port:
                  number: 8000
          - path: /api/v1/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 8000
          - path: /api/v1/server/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-srv
                port:
                  number: 8000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: fusion-srv
                port:
                  number: 8000
          - path: /ws/socket/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-srv
                port:
                  number: 8000
